2004-09-30  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/info_book_dialog.glade,
	  data/alexandria/glade/preferences_dialog.glade,
	  lib/alexandria/ui/main_app.rb:

	s/Edition/Binding.

	* data/alexandria/glade/info_book_dialog.glade,
	  lib/alexandria/book.rb,
	  lib/alexandria/ui/info_book_dialog.rb,
	  lib/alexandria/ui/main_app.rb:

	The book properties dialog has been modified to allow the
	edition of all fields (title, authors, etc...).  The cover
	still needs some code to be changed though.

	* lib/alexandria/ui/export_dialog.rb:

	Fixed the ONIX archive extention to .tbz2 instead of tgz.

	* lib/alexandria/book_providers.rb:

	Splitted a translatable string.

2004-09-19  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	- Show more feedback on the status bar ;
	- Added keyboard shortcuts for the Import/Export actions.

	* lib/alexandria/ui/new_book_dialog.rb:

	Splitted some translatable strings. 

	* lib/alexandria/library.rb (#n_rated, #n_unrated):

	Added.

2004-09-14  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/library.rb,
	  lib/alexandria/ui/export_dialog.rb:

	Introduced an experimental ONIX export.

	* lib/alexandria/ui/new_book_dialog.rb,
	  data/alexandria/glade/new_book_dialog.glade:

	- Migrated another GtkCombo to GtkComboBox ;
	- Fixed a bug introduced in the previous commit.

2004-09-11  Laurent Sansonetti  <lrz@gnome.org>

	* README:

	- Requires Ruby-GNOME2 0.10.1 ;
	- Requires Ruby-GetText 0.6.1 ;
	- Added information for the "/apps/alexandria/providers_priority" &
	  Barnes and Noble provider upgrading issue.

	* lib/alexandria/ui/main_app.rb:

	- Fixed keyboard shortcut for "Show Sidepane" (F9) ;
	- Fixed library creation ;
	- Fixed the alignment of cell renderers in the sidepane treeview ;
	- Fixed indentation.

	* lib/alexandria/ui/new_book_dialog.rb,
	  data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/preferences_dialog.rb:

	Migrated to Gtk::ComboBox.	
