@@ -1,3 +1,10 @@
+2004-10-01  Robby Stephenson  <robby@periapsis.org>
+
+	* lib/alexandria/library.rb,
+	  lib/alexandria/ui/export_dialog.rb:
+
+	Introduced Tellico (ex. Bookcase) .zip archive export.
+
 2004-09-30  Laurent Sansonetti  <lrz@gnome.org>
 
 	* data/alexandria/glade/info_book_dialog.glade,
